@@ -33,7 +33,7 @@ test 'connecting with supplied params' => sub {
 
     is($t->constructor_calls_count,1,'built once');
     my $call = $t->constructor_calls->[0];
-    is_deeply($call,$new_params,'custom host used');
+    is_deeply($call,{hosts=>[$new_params]},'custom host used');
 
     is($t->connection_calls_count,1,'connected once');
     $call = $t->connection_calls->[0];
