@@ -11,29 +11,25 @@ test 'connecting with supplied params' => sub {
 
     my $t = Test::Plack::Handler::Stomp->new();
 
-    my $new_params = {
-        hostname => 'foo',
-        port => 12345,
-    };
     my $conn_head = {
         login => 'myuser',
         password => 'mypass',
     };
+    my $new_params = {
+        hostname => 'foo',
+        port => 12345,
+        connect_headers => $conn_head,
+    };
 
     $t->set_arg(
-        servers => [
-            {
-                %$new_params,
-                connect_headers => $conn_head,
-            },
-        ],
+        servers => [$new_params],
     );
 
     $t->handler->run();
 
     is($t->constructor_calls_count,1,'built once');
     my $call = $t->constructor_calls->[0];
-    is_deeply($call,$new_params,'custom host used');
+    is_deeply($call,{hosts=>[$new_params]},'custom host used');
 
     is($t->connection_calls_count,1,'connected once');
     $call = $t->connection_calls->[0];
