@@ -1,4 +1,5 @@
 {{$NEXT}}
+ - require Net::Stomp::MooseHelpers 2.6 for newer failover handling
 
 1.08      2014-02-25 16:52:22 Europe/London
  - fix real_broker test for compatibility with MooseHelpers 2.2
